@@ -36,6 +36,10 @@ my $d = Music::Dice->new(
  
 my $c_phrase = $d->rhythmic_phrase->roll; # harmony
 # print "H: @{ $c_phrase }\n";
+my $pool   = $d->pool;
+my $groups = $d->phrase_groups;
+$d->pool([ @$pool, qw(tqn) ]);
+$d->phrase_groups([ @$groups, 3 ]);
 my $m_phrase = $d->rhythmic_phrase->roll; # melody
 # print "M: @{ $m_phrase }\n";
 my $tonic    = $d->note->roll;
